# Threshold

./: .gitignore  AGENTS.md  CLAUDE.md  ENGINEERING.md  LICENSE  MILESTONE-2-IMPLEMENTATION-PLAN.md  MILESTONE-3-IMPLEMENTATION-PLAN.md  MILESTONE-4-IMPLEMENTATION-PLAN.md  SETUP.md  TESTING-SUMMARY.md  codex-milestone-4-review.md  config.example.toml  readme.md
.playwright/: cli.config.json
crates/cli-wrapper/: Cargo.toml
crates/cli-wrapper/src/: claude.rs  haiku.rs  lib.rs  locks.rs  models.rs  process.rs  queue.rs  response.rs  session.rs  stream.rs  tracker.rs
crates/conversation/: Cargo.toml
crates/conversation/src/: audit.rs  engine.rs  lib.rs  portals.rs  store.rs
crates/core/: Cargo.toml
crates/core/src/: active_tracker.rs  audit.rs  config.rs  error.rs  lib.rs  logging.rs  paths.rs  secrets.rs  types.rs
crates/discord/: Cargo.toml
crates/discord/src/: bot.rs  chunking.rs  commands.rs  handler.rs  lib.rs  outbound.rs  portals.rs  scheduler_commands.rs  security.rs
crates/gmail/: Cargo.toml
crates/gmail/src/: auth.rs  cli.rs  client.rs  lib.rs  types.rs
crates/imagegen/: Cargo.toml
crates/imagegen/src/: cli.rs  client.rs  lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: cron_utils.rs  daemon_api.rs  engine.rs  execution.rs  heartbeat.rs  lib.rs  store.rs  task.rs  work_items.rs
crates/server/: Cargo.toml
crates/server/src/: daemon_client.rs  gmail.rs  imagegen.rs  main.rs  output.rs  portal.rs  schedule.rs
crates/tools/: Cargo.toml
crates/tools/.threshold/audit/: tools.jsonl
crates/tools/src/: context.rs  lib.rs  profiles.rs  prompt.rs  registry.rs
crates/tools/src/builtin/: edit.rs  exec.rs  mod.rs  read.rs  write.rs
crates/tray/: Cargo.toml
crates/tray/src/: icons.rs  main.rs  menu.rs  poller.rs
crates/web/: Cargo.toml
crates/web/src/: csrf.rs  error.rs  flash.rs  lib.rs  state.rs  templates.rs
crates/web/src/helpers/: jsonl.rs  mod.rs  time.rs
crates/web/src/routes/: audit.rs  config.rs  conversations.rs  index.rs  logs.rs  mod.rs  schedules.rs
crates/web/static/: style.css
crates/web/templates/: base.html  error.html  index.html
crates/web/templates/audit/: browser.html  tab_partial.html
crates/web/templates/config/: credentials.html  editor.html
crates/web/templates/conversations/: audit_partial.html  detail.html  list.html
crates/web/templates/logs/: entries_partial.html  viewer.html
crates/web/templates/schedules/: list.html
crates/web/tests/: e2e_playwright.sh  e2e_server.rs
docs/: 04-codex-cli-wrapper.md  10-playwright-browser-automation.md  AI_dev_guide.md  IMPLEMENTATION-PLAN.md  PRODUCT-PLAN.md  bugs.md
docs/milestones/: milestone-01-core-foundation.md  milestone-02-cli-wrapper.md  milestone-03-conversation-engine.md  milestone-04-discord-server.md  milestone-05-tool-framework.md  milestone-06-heartbeat.md  milestone-06-unified-scheduler.md  milestone-07-cron-scheduler.md  milestone-08-browser-automation.md  milestone-09-gmail.md  milestone-10-image-generation.md  milestone-11-web-interface.md  milestone-12-conversation-memory-and-per-chat-heartbeat.md  milestone-13-file-secret-store.md  milestone-14-discord-interaction.md  milestone-15-multi-platform-portals.md  milestone-16-daemon-management.md  milestone-17-startup-and-tray.md
docs/research/: 00-overview.md  01-oauth-credential-flow.md  02-session-management.md  03-claude-code-cli-wrapper.md  05-channel-integration.md  06-voice-audio-architecture.md  07-elevenlabs-integration.md  08-api-key-management.md  09-tool-execution-model.md
scripts/: setup-discord-token.sh  threshold-wrapper.ps1  threshold-wrapper.sh
