[package]
name = "threshold-cli-wrapper"
version.workspace = true
edition.workspace = true

[dependencies]
threshold-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
