[package]
name = "threshold-imagegen"
version.workspace = true
edition.workspace = true

[dependencies]
threshold-core = { path = "../core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4" }
getrandom = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
