[package]
name = "threshold-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
threshold-core = { path = "../core" }
threshold-cli-wrapper = { path = "../cli-wrapper" }
threshold-conversation = { path = "../conversation" }

cron = "0.13"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
async-trait = "0.1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
