[package]
name = "threshold"
version.workspace = true
edition.workspace = true

[[bin]]
name = "threshold"
path = "src/main.rs"

[dependencies]
threshold-core = { path = "../core" }
threshold-cli-wrapper = { path = "../cli-wrapper" }
threshold-conversation = { path = "../conversation" }
threshold-discord = { path = "../discord" }
threshold-tools = { path = "../tools" }
threshold-scheduler = { path = "../scheduler" }
threshold-gmail = { path = "../gmail" }
threshold-imagegen = { path = "../imagegen" }
threshold-web = { path = "../web" }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile = "3"
