[package]
name = "threshold-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
threshold-core = { path = "../core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
