[package]
name = "threshold-web"
version.workspace = true
edition.workspace = true

[dependencies]
threshold-core = { path = "../core" }
threshold-conversation = { path = "../conversation" }
threshold-scheduler = { path = "../scheduler" }

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
minijinja = { version = "2", features = ["loader"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde"] }
rand = "0.9"
hex = "0.4"
http = "1"
anyhow = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
threshold-cli-wrapper = { path = "../cli-wrapper" }
